--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "date-fns": "^3.3.1",
     "firebase": "^10.8.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.21.3",
     "react-toastify": "^10.0.4",
     "swiper": "^11.0.5",
